remove the labels of time slide map (avoid label overlap)

--- a/src/components/maps/timeSlideMap.css
+++ b/src/components/maps/timeSlideMap.css
@@ -45,7 +45,7 @@
 .slider-box {
     position: absolute;
     bottom: 40px;
-    height: 60px;
+    height: 50px;
     left: 10%;
     right: 10%;
     z-index: 2;
@@ -61,4 +61,5 @@
 .slider {
     width: 100%;
     padding-left: 20px;
+    padding-top: 5px;
 }
